# docc2context-service

./: .coverage  .dockerignore  .env.development  .env.example  .env.production  .env.staging  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_QUICKSTART.md  alert_rules.yml  alertmanager.yml  docker-compose.yml  logstash.conf  logstash_retention.conf  nginx.conf  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_drag_and_drop.html  test_resource_limits.py  verify_security_checklist.py
.github/workflows/: README.md  ci-cd.yml
DOCS/: CONFIGURATION.md  DEPLOYMENT.md  DOCC2CONTEXT_MANUAL.md  INDEX.md  LOGGING.md  MONITORING.md  PRD.md  Workplan.md
DOCS/COMMANDS/: ARCHIVE.md  EXECUTE.md  FLOW.md  GITWORKFLOW.md  GIT_FINALIZATION.md  PLAN.md  PROGRESS.md  README.md  SELECT.md
DOCS/COMMANDS/PRIMITIVES/: COMMIT_CHANGES.md  CREATE_BRANCH.md  CREATE_PR.md  PUSH_BRANCH.md  VERIFY_GIT_STATE.md
DOCS/DEPLOYMENT/: DEPLOYMENT_APPROVAL_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  PHASE5_SMOKE_TEST_SUMMARY.md  ROLLBACK_RUNBOOK.md  TESTING_RESULTS_PHASE_5.6.md
DOCS/INPROGRESS/: 01-security-audit-and-fixes.md  02-security-documentation.md  03-implementation-summary.md  04-code-quality-fixes.md  05-merge-and-status.md  1.2_Deploy_the_CLI_App_from_Source_Code.md  1.3_Core_FastAPI_Application_Structure.md  1.6_SubprocessManager_Swift_CLI_Execution.md  2.2_Drag_and_Drop_Upload_Zone.md  2.3_Upload_Progress_Processing_States.md  3.2_Unit_Integration_Tests.md  4.2_Environment_Quality_Gates.md  5.1_Disable_Swagger_Configure_CORS.md  5.2_Configure_Monitoring_Alerting.md  5.3_Set_Up_Log_Aggregation.md  5.6_Security_Testing_in_Staging.md  next.md
DOCS/INPROGRESS/SpecificationCore.doccarchive/: metadata.json
DOCS/PLAYBOOKS/: INCIDENT_RESPONSE_PLAYBOOK.md  cpu_exhaustion.md  extraction_failures.md  high_error_rate.md  memory_exhaustion.md  service_down.md
DOCS/SECURITY/: SECURITY_QUICKSTART.md
DOCS/TASKS_ARCHIVE/: 2.2_Drag_and_Drop_Upload_Zone.md  INDEX.md
DOCS/TASKS_ARCHIVE/1.1_Docker_Environment_Setup/: 1.1_Docker_Environment_Setup.md
DOCS/TASKS_ARCHIVE/1.2_Deploy_the_CLI_App_from_Source_Code/: 1.2_Deploy_the_CLI_App_from_Source_Code.md
DOCS/TASKS_ARCHIVE/1.3_Core_FastAPI_Application_Structure/: 1.3_Core_FastAPI_Application_Structure.md
DOCS/TASKS_ARCHIVE/1.4_File_Upload_Validation_Service/: 1.4_File_Upload_Validation_Service.md
DOCS/TASKS_ARCHIVE/5.6_Security_Testing_in_Staging/: PRD.md  (+1 more)
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  conversion_pipeline.py  health_service.py  logging.py  metrics.py  security.py  subprocess_manager.py
app/services/: conversion_pipeline.py  file_validation.py  health_service.py  response_streaming.py  subprocess_manager.py  workspace_manager.py
app/static/: index.html
dashboards/: extraction_failures.json  performance.json  security_events.json
scripts/: check_env.py  check_prod_ready.sh  check_quality.sh  cleanup_workspaces.py  format.sh  setup_dev.sh  setup_elasticsearch.sh  validate.py
tests/: conftest.py  test_api_endpoints.py  test_config_security.py  test_conversion_pipeline.py  test_elk_integration.py  test_example.py  test_file_validation.py  test_health_service.py  test_logging.py  test_monitoring.py  test_security.py  test_subprocess_manager.py
(+719 files in other folders)
